shuffle around stories

--- a/src/pages/Dashboard.stories.mdx
+++ b/src/pages/Dashboard.stories.mdx
@@ -1,12 +1,12 @@
 import { Meta } from '@storybook/addon-docs';
-import Code from '../stories/assets/code-brackets.svg';
-import Colors from '../stories/assets/colors.svg';
-import Comments from '../stories/assets/comments.svg';
-import Direction from '../stories/assets/direction.svg';
-import Flow from '../stories/assets/flow.svg';
-import Plugin from '../stories/assets/plugin.svg';
-import Repo from '../stories/assets/repo.svg';
-import StackAlt from '../stories/assets/stackalt.svg';
+import Code from '../assets/images/code-brackets.svg';
+import Colors from '../assets/images/colors.svg';
+import Comments from '../assets/images/comments.svg';
+import Direction from '../assets/images/direction.svg';
+import Flow from '../assets/images/flow.svg';
+import Plugin from '../assets/images/plugin.svg';
+import Repo from '../assets/images/repo.svg';
+import StackAlt from '../assets/images/stackalt.svg';
 
 <Meta title="Dashboard/Introduction" />
 
@@ -114,7 +114,7 @@ import StackAlt from '../stories/assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Storybook
+# Dashboard
 
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
