--- a/src/components/Components.stories.mdx
+++ b/src/components/Components.stories.mdx
@@ -1,14 +1,14 @@
 import { Meta } from '@storybook/addon-docs';
-import Code from './assets/code-brackets.svg';
-import Colors from './assets/colors.svg';
-import Comments from './assets/comments.svg';
-import Direction from './assets/direction.svg';
-import Flow from './assets/flow.svg';
-import Plugin from './assets/plugin.svg';
-import Repo from './assets/repo.svg';
-import StackAlt from './assets/stackalt.svg';
+import Code from '../assets/images/code-brackets.svg';
+import Colors from '../assets/images/colors.svg';
+import Comments from '../assets/images/comments.svg';
+import Direction from '../assets/images/direction.svg';
+import Flow from '../assets/images/flow.svg';
+import Plugin from '../assets/images/plugin.svg';
+import Repo from '../assets/images/repo.svg';
+import StackAlt from '../assets/images/stackalt.svg';
 
-<Meta title="Example/Introduction" />
+<Meta title="Components/Introduction" />
 
 <style>{`
   .subheading {
@@ -114,7 +114,7 @@ import StackAlt from './assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Storybook
+# Components
 
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
