--- a/src/components/Components.stories.mdx
+++ b/src/components/Components.stories.mdx
@@ -116,6 +116,10 @@ import StackAlt from '../assets/images/stackalt.svg';
 
 # Components
 
+Stories for individual components.
+
+## About Storybook
+
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
 
