--- a/src/pages/Dashboard.stories.mdx
+++ b/src/pages/Dashboard.stories.mdx
@@ -116,6 +116,10 @@ import StackAlt from '../assets/images/stackalt.svg';
 
 # Dashboard
 
+Stories composed into a screen for the Dashboard.
+
+## About Storybook
+
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
 
